examples/04-Kubernetes/configmap-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-test-pod
spec:
  containers:
    - name: app
      image: nginx:alpine
