examples/04-Kubernetes/ingress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godmode-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 5678
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {} # Empty means it selects ALL pods in the namespace
  policyTypes:
  - Ingress
